Update spring security endpoints settings

--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -1,13 +1,10 @@
 ########################################################################################################################
 # Server Settings
 ########################################################################################################################
-# Server
+# General
 #
 server.port=8080
-# Servlet
 server.servlet.contextPath=/
-#
-# SSL
 server.ssl.enabled=false
 #
 # CAS Server
@@ -18,7 +15,6 @@ cas.server.prefix=${cas.server.name}
 # Tomcat Server
 #
 cas.server.tomcat.server-name=OSF CAS
-#
 # Enable additional HTTP connections for the embedded Tomcat container (when SSL is enabled by default)
 # cas.server.tomcat.http.port=8080
 # cas.server.tomcat.http.protocol=org.apache.coyote.http11.Http11NioProtocol
@@ -27,7 +23,16 @@ cas.server.tomcat.server-name=OSF CAS
 # e.g. cas.server.tomcat.http.attributes.{attribute-name}={attributeValue}
 ########################################################################################################################
 
-
+########################################################################################################################
+# CAS Web Application Endpoints Security
+# See: https://docs.spring.io/spring-boot/docs/2.2.8.RELEASE/reference/htmlsingle/#boot-features-security
+# Currently, no sensitive endpoint is exposed. However, set them to prevent auto-generated and logged password
+########################################################################################################################
+# CAS Web Application Endpoints Security
+spring.security.user.name=casuser
+spring.security.user.password=changeme
+spring.security.user.roles=USER
+########################################################################################################################
 
 ########################################################################################################################
 # Logging Settings
@@ -35,14 +40,11 @@ cas.server.tomcat.server-name=OSF CAS
 logging.config=file:/etc/cas/config/log4j2.xml
 ########################################################################################################################
 
-
 ########################################################################################################################
 # Accept Users Authentication - Demo purpose only, must set to empty on production
 ########################################################################################################################
 cas.authn.accept.users=
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # JSON Service Registry
@@ -50,8 +52,6 @@ cas.authn.accept.users=
 ########################################################################################################################
 cas.serviceRegistry.json.location=file:/etc/cas/services
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # CAS Logout and Single Logout (SLO)
@@ -65,8 +65,6 @@ cas.logout.confirm-logout=false
 cas.logout.remove-descendant-tickets=false
 ########################################################################################################################
 
-
-
 ########################################################################################################################
 # OSF PostgreSQL Authentication
 # See: https://apereo.github.io/cas/6.2.x/installation/Configuring-Custom-Authentication.html
@@ -75,7 +73,7 @@ cas.logout.remove-descendant-tickets=false
 #
 cas.authn.osf-postgres.enabled=true
 cas.authn.osf-postgres.order=0
-
+#
 # JPA settings for OSF PostgreSQL
 #
 cas.authn.osf-postgres.jpa.user=postgres
@@ -84,8 +82,6 @@ cas.authn.osf-postgres.jpa.driver-class=org.postgresql.Driver
 cas.authn.osf-postgres.jpa.url=jdbc:postgresql://192.168.168.167:5432/osf?targetServerType=master&readOnly=true
 cas.authn.osf-postgres.jpa.dialect=io.cos.cas.osf.hibernate.dialect.OsfPostgresDialect
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # JPA Ticket Registry
@@ -137,8 +133,6 @@ cas.ticket.registry.jpa.ticket-lock-type=NONE
 cas.ticket.registry.jpa.jpa-locking-timeout=PT1H
 ########################################################################################################################
 
-
-
 ########################################################################################################################
 # Signing and Encryption
 # See: https://apereo.github.io/cas/6.2.x/configuration/Configuration-Properties-Common.html#signing--encryption
@@ -154,10 +148,7 @@ cas.webflow.crypto.encryption.key=changeme
 #
 cas.tgc.crypto.signing.key=changeme
 cas.tgc.crypto.encryption.key=changeme
-#
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # Long-term Authentication: Ticket Granting Cookie (TGC) and Ticket Granting Ticket (TGT)
@@ -184,10 +175,7 @@ cas.tgc.auto-configure-cookie-path=true
 #
 cas.ticket.tgt.remember-me.enabled=true
 cas.ticket.tgt.remember-me.time-to-kill-in-seconds=7200
-#
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # Pac4j Delegated Authentication
