Overlay class CasTomcatBanner - an exact copy as of 6.2.x

--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,9 @@ dependencies {
     // JPA Ticket Registry
     implementation "org.apereo.cas:cas-server-support-jpa-ticket-registry:${project.'cas.version'}"
 
+    // Tomcat Catalina
+    implementation "org.apache.tomcat:tomcat-catalina:${springBootTomcatVersion}"
+
     // Hibernate
     implementation "org.hibernate:hibernate-core:${hibernateCoreVersion}"
 
