--- a/Dockerfile-local
+++ b/Dockerfile-local
@@ -14,8 +14,9 @@ RUN mkdir -p ~/.gradle \
 
 RUN cd cas-overlay && ./gradlew clean build --parallel --no-daemon;
 # The build process above in docker may takes a long time depending on your local resources. This OK if you only use
-# CAS by building it once. For local development, building with your IDE such as IntelliJ is much faster. Afterwards,
-# simply comment out the above "RUN" command and enable the following "COPY" one.
+# CAS by building it once. For local development, building in local shell or with your IDE such as IntelliJ is much
+# faster. Afterwards, simply comment out the above "RUN" command and enable the following "COPY" one. In fact, this
+# stage can be skipped if you have the WAR built locally. Just need run the second stage with a modified WAR source.
 # COPY ./build cas-overlay/build/
 
 FROM adoptopenjdk/openjdk11:alpine-jre AS cas
@@ -32,9 +33,10 @@ RUN cd / \
 COPY etc/cas/ /etc/cas/
 
 COPY etc/cas/config/ /etc/cas/config/
-# Use "cas-local.properties" for local development
+# Use "cas-local.properties" and "log4j2-local.xml" for local development
 RUN rm etc/cas/config/cas.properties
 COPY etc/cas/config/local/cas-local.properties etc/cas/config/cas.properties
+COPY etc/cas/config/local/log4j2-local.xml etc/cas/config/log4j2.xml
 RUN rm -r etc/cas/config/local
 
 COPY etc/cas/services/ /etc/cas/services/
