--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -65,6 +65,23 @@ cas.logout.remove-descendant-tickets=false
 ########################################################################################################################
 
 ########################################################################################################################
+# OSF API Settings for Institution Authentication
+########################################################################################################################
+# Authentication Endpoint
+#
+cas.authn.osf-api.instn-authn-endpoint=https://{{ .Values.apiDomain }}/v2/institutions/auth/
+#
+# JWT / JWE secrets for signing and encrypting authentication request payload
+#
+cas.authn.osf-api.instn-authn-jwt-secret=${OSF_JWT_SECRET}
+cas.authn.osf-api.instn-authn-jwe-secret=${OSF_JWE_SECRET}
+#
+# Path of the XSL file for parsing and transforming XML authentication responses
+#
+cas.authn.osf-api.instn-authn-xsl-location=file:etc/config/instn-authn.xsl
+########################################################################################################################
+
+########################################################################################################################
 # OSF PostgreSQL Authentication
 # See: https://apereo.github.io/cas/6.2.x/installation/Configuring-Custom-Authentication.html
 ########################################################################################################################
