--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -66,6 +66,23 @@ cas.logout.remove-descendant-tickets=false
 ########################################################################################################################
 
 ########################################################################################################################
+# OSF API Settings for Institution Authentication
+########################################################################################################################
+# Authentication Endpoint
+#
+cas.authn.osf-api.instn-authn-endpoint=http://localhost:8000/v2/institutions/auth/
+#
+# JWT / JWE secrets for signing and encrypting authentication request payload
+#
+cas.authn.osf-api.instn-authn-jwt-secret=osf_api_cas_login_jwt_secret_32b
+cas.authn.osf-api.instn-authn-jwe-secret=osf_api_cas_login_jwe_secret_32b
+#
+# Path of the XSL file for parsing and transforming XML authentication responses
+#
+cas.authn.osf-api.instn-authn-xsl-location=file:etc/config/instn-authn.xsl
+########################################################################################################################
+
+########################################################################################################################
 # OSF PostgreSQL Authentication
 # See: https://apereo.github.io/cas/6.2.x/installation/Configuring-Custom-Authentication.html
 ########################################################################################################################
