Implement OSF URL prop and put it in the flow context
CASv4.1.x-based oldCAS uses JSP as the template engine with Spring.
Settings defined in .properties files can be accessed directly in
JSPs. However, it is no longer the case for CASv6.2.x-based newCAS
that uses Thymeleaf as the template engine (with Spring of course).
Thus, server-specific URLs (i.e. production, test and stage) need
to be manually put into the flow context for templates to access.

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -65,6 +65,29 @@ cas.logout.remove-descendant-tickets=false
 ########################################################################################################################
 
 ########################################################################################################################
+# OSF URLs
+########################################################################################################################
+# OSF
+#
+cas.authn.osf-url.home=https://{{ .Values.osfDomain }}/
+cas.authn.osf-url.dashboard=https://{{ .Values.osfDomain }}/dashboard/
+cas.authn.osf-url.logout=https://{{ .Values.osfDomain }}/logout/
+cas.authn.osf-url.resend-confirmation=https://{{ .Values.osfDomain }}/resend/
+cas.authn.osf-url.forgot-password=https://{{ .Values.osfDomain }}/forgotpassword/
+cas.authn.osf-url.register=https://{{ .Values.osfDomain }}/register/
+cas.authn.osf-url.search=https://{{ .Values.osfDomain }}/search/
+cas.authn.osf-url.support=https://{{ .Values.osfDomain }}/support/
+cas.authn.osf-url.donate=https://www.cos.io/about/support-cos/
+#
+# OSF Products
+#
+cas.authn.osf-url.preprints-home=https://{{ .Values.osfDomain }}/preprints/
+cas.authn.osf-url.registries-home=https://{{ .Values.osfDomain }}/registries/
+cas.authn.osf-url.institutions-home=https://{{ .Values.osfDomain }}/institutions/
+cas.authn.osf-url.meetings-home=https://{{ .Values.osfDomain }}/meetings/
+########################################################################################################################
+
+########################################################################################################################
 # OSF API Settings for Institution Authentication
 ########################################################################################################################
 # Authentication Endpoint
