Fix instn-authn.xsl file path

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -101,7 +101,7 @@ cas.authn.osf-api.instn-authn-jwe-secret=${OSF_JWE_SECRET}
 #
 # Path of the XSL file for parsing and transforming XML authentication responses
 #
-cas.authn.osf-api.instn-authn-xsl-location=file:etc/config/instn-authn.xsl
+cas.authn.osf-api.instn-authn-xsl-location=file:/etc/cas/config/instn-authn.xsl
 ########################################################################################################################
 
 ########################################################################################################################
