--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -102,7 +102,7 @@ cas.authn.osf-api.instn-authn-jwe-secret=osf_api_cas_login_jwe_secret_32b
 #
 # Path of the XSL file for parsing and transforming XML authentication responses
 #
-cas.authn.osf-api.instn-authn-xsl-location=file:etc/config/instn-authn.xsl
+cas.authn.osf-api.instn-authn-xsl-location=file:/etc/cas/config/instn-authn.xsl
 ########################################################################################################################
 
 ########################################################################################################################
