--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,12 @@ dependencies {
 
     // Google GSON
     implementation "com.google.code.gson:gson:${gsonVersion}"
+
+    // Javascript Object Signing and Encryption (JOSE) and JSON Web Tokens (JWT)
+    implementation "com.nimbusds:nimbus-jose-jwt:${nimbusJoseVersion}"
+
+    // Apache HttpComponents Client fluent API
+    implementation "org.apache.httpcomponents:fluent-hc:${fluentHcVersion}"
 }
 
 tasks.findByName("jibDockerBuild")
