Fix OSF API instn authn endpoint for local development

--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -93,7 +93,7 @@ cas.authn.osf-url.meetings-home=http://localhost:5000/meetings/
 ########################################################################################################################
 # Authentication Endpoint
 #
-cas.authn.osf-api.instn-authn-endpoint=http://localhost:8000/v2/institutions/auth/
+cas.authn.osf-api.instn-authn-endpoint=http://192.168.168.167:8000/v2/institutions/auth/
 #
 # JWT / JWE secrets for signing and encrypting authentication request payload
 #
