Enable pac4j-cas instn cord and okstate

--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -246,14 +246,14 @@ cas.authn.pac4j.orcid.callback-url-type=QUERY_PARAMETER
 #
 # Delegation Client: CAS
 #
-cas.authn.pac4j.cas[0].login-url=https://accounts.staging.osf.io/login
-cas.authn.pac4j.cas[0].client-name=stage1cas
+cas.authn.pac4j.cas[0].login-url=https://bprdeis.cord.edu:8443/cas/login
+cas.authn.pac4j.cas[0].client-name=cord
 cas.authn.pac4j.cas[0].protocol=SAML
 cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
 #
-cas.authn.pac4j.cas[1].login-url=https://accounts.staging2.osf.io/login
-cas.authn.pac4j.cas[1].client-name=stage2cas
-cas.authn.pac4j.cas[1].protocol=CAS30
+cas.authn.pac4j.cas[1].login-url=https://stwcas.okstate.edu/cas/login
+cas.authn.pac4j.cas[1].client-name=okstate
+cas.authn.pac4j.cas[1].protocol=SAML
 cas.authn.pac4j.cas[1].callback-url-type=QUERY_PARAMETER
 #
 cas.authn.pac4j.cas[2].login-url=http://192.168.168.167:8081/login
