--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -72,6 +72,7 @@ cas.logout.remove-descendant-tickets=false
 #
 cas.authn.osf-url.home=http://localhost:5000/
 cas.authn.osf-url.dashboard=http://localhost:5000/dashboard/
+cas.authn.osf-url.login-with-next=http://localhost:5000/login?next=
 cas.authn.osf-url.logout=http://localhost:5000/logout/
 cas.authn.osf-url.resend-confirmation=http://localhost:5000/resend/
 cas.authn.osf-url.forgot-password=http://localhost:5000/forgotpassword/
