--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -69,6 +69,7 @@ cas.authn.osf-url.login-with-next=https://{{ .Values.osfDomain }}/login?next=
 cas.authn.osf-url.logout=https://{{ .Values.osfDomain }}/logout/
 cas.authn.osf-url.resend-confirmation=https://{{ .Values.osfDomain }}/resend/
 cas.authn.osf-url.forgot-password=https://{{ .Values.osfDomain }}/forgotpassword/
+cas.authn.osf-url.forgot-password-institution=https://{{ .Values.osfDomain }}/forgotpassword-institution/
 cas.authn.osf-url.register=https://{{ .Values.osfDomain }}/register/
 ########################################################################################################################
 
