--- a/build.gradle
+++ b/build.gradle
@@ -160,3 +160,15 @@ idea {
         downloadSources = true
     }
 }
+
+plugins {
+  id "org.sonarqube" version "3.0"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "CenterForOpenScience_osf-cas"
+    property "sonar.organization", "centerforopenscience"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
