Unsupported institution rework
* Added previously removed OSF institution URL to OsfUrlProperties
* Removed legacy oldCAS button styles
* Rewrote the page with the FE new design
* Added scripts for pre- and pro- processing the submission button
* Syncec styles between all three institution pages
* Renamed variables in messages.properties

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -71,6 +71,7 @@ cas.authn.osf-url.resend-confirmation=https://{{ .Values.osfDomain }}/resend/
 cas.authn.osf-url.forgot-password=https://{{ .Values.osfDomain }}/forgotpassword/
 cas.authn.osf-url.forgot-password-institution=https://{{ .Values.osfDomain }}/forgotpassword-institution/
 cas.authn.osf-url.register=https://{{ .Values.osfDomain }}/register/
+cas.authn.osf-url.institutions-home=https://{{ .Values.osfDomain }}/institutions/
 ########################################################################################################################
 
 ########################################################################################################################
