--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -76,7 +76,9 @@ cas.authn.osf-url.login-with-next=http://localhost:5000/login?next=
 cas.authn.osf-url.logout=http://localhost:5000/logout/
 cas.authn.osf-url.resend-confirmation=http://localhost:5000/resend/
 cas.authn.osf-url.forgot-password=http://localhost:5000/forgotpassword/
+cas.authn.osf-url.forgot-password-institution=http://localhost:5000/forgotpassword-institution/
 cas.authn.osf-url.register=http://localhost:5000/register/
+cas.authn.osf-url.institutions-home=http://localhost:5000/institutions/
 ########################################################################################################################
 
 ########################################################################################################################
