Implement OsfPostgresServiceRegistry to support OSF developer apps
OsfPostgresServiceRegistry is a customized service registry that
uses OSF JPA data access model to load OSF dev apps into CAS and
transform them into the built-in OAuth 2.0 registered services.

In addition, this new service registry is injected into the CAS
implementation so that the built-in service manager can manage
and access them as if they were built-in ones. Thus, any class
that has access to the service manager can access OSF dev apps.

`build.gradle` and `spring/factories` are updated as well.

--- a/build.gradle
+++ b/build.gradle
@@ -127,6 +127,11 @@ dependencies {
     // JPA OSF PostgreSQL
     implementation "org.apereo.cas:cas-server-support-jpa-util:${project.'cas.version'}"
 
+    // JPA OSF PostgresQL Service Registry
+    implementation "org.apereo.cas:cas-server-core-services:${project.'cas.version'}"
+    implementation "org.apereo.cas:cas-server-core-services-api:${project.'cas.version'}"
+    implementation "org.apereo.cas:cas-server-core-services-registry:${project.'cas.version'}"
+
     // JPA Ticket Registry
     implementation "org.apereo.cas:cas-server-support-jpa-ticket-registry:${project.'cas.version'}"
 
@@ -142,9 +147,6 @@ dependencies {
     implementation "org.apereo.cas:cas-server-core-authentication-throttle:${project.'cas.version'}"
     implementation "org.apereo.cas:cas-server-core-configuration-api:${project.'cas.version'}"
     implementation "org.apereo.cas:cas-server-core-cookie-api:${project.'cas.version'}"
-    implementation "org.apereo.cas:cas-server-core-services:${project.'cas.version'}"
-    implementation "org.apereo.cas:cas-server-core-services-api:${project.'cas.version'}"
-    implementation "org.apereo.cas:cas-server-core-services-registry:${project.'cas.version'}"
     implementation "org.apereo.cas:cas-server-core-tickets-api:${project.'cas.version'}"
     implementation "org.apereo.cas:cas-server-core-validation-api:${project.'cas.version'}"
     implementation "org.apereo.cas:cas-server-core-webflow-mfa:${project.'cas.version'}"
