Parameterizes Sonar URL

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonarqube --info
+        run: ./gradlew build sonarqube -Dsonar.projectKey=${{ secrets.SONAR_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }} --info
         continue-on-error: true
