--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -18,6 +18,17 @@ cas.server.tomcat.server-name=OSF CAS
 ########################################################################################################################
 
 ########################################################################################################################
+# Throttling
+########################################################################################################################
+# Authentication Failure Throttling
+cas.authn.throttle.username-parameter=username
+cas.authn.throttle.app-code=CAS
+cas.authn.throttle.failure.threshold=5
+cas.authn.throttle.failure.code=AUTHENTICATION_FAILED
+cas.authn.throttle.failure.range-seconds=1
+########################################################################################################################
+
+########################################################################################################################
 # CAS Web Application Endpoints Security
 # See: https://docs.spring.io/spring-boot/docs/2.2.8.RELEASE/reference/htmlsingle/#boot-features-security
 # Currently, no sensitive endpoint is exposed. However, set them to prevent auto-generated and logged password
