Update local and server cas.properties for the OAuth server

--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -254,3 +254,43 @@ cas.authn.pac4j.cas[2].client-name=fakecas
 cas.authn.pac4j.cas[2].protocol=CAS30
 cas.authn.pac4j.cas[2].callback-url-type=QUERY_PARAMETER
 ########################################################################################################################
+
+########################################################################################################################
+# OAuth 2.0 Server
+# Configuration guide: https://apereo.github.io/cas/6.2.x/installation/OAuth-OpenId-Authentication.html
+# Properties: https://apereo.github.io/cas/6.2.x/configuration/Configuration-Properties.html#oauth2
+########################################################################################################################
+# Authorization Code
+#
+cas.authn.oauth.code.time-to-kill-in-seconds=60
+cas.authn.oauth.code.number-of-uses=1
+#
+# Access token
+#
+cas.authn.oauth.access-token.time-to-kill-in-seconds=7200
+cas.authn.oauth.access-token.max-time-to-live-in-seconds=28800
+#
+# OAuth JWT Access Tokens
+# Signing and encryption are not enabled for Token / JWT Tickets.
+# The keys will only attempt to produce signed (signing key) and plain (encryption key) objects.
+#
+cas.authn.oauth.access-token.create-as-jwt=false
+cas.authn.oauth.access-token.crypto.encryption-enabled=false
+cas.authn.oauth.access-token.crypto.signing-enabled=false
+cas.authn.oauth.access-token.crypto.signing.key=changeme
+cas.authn.oauth.access-token.crypto.encryption.key=changeme
+#
+# Refresh token
+#
+cas.authn.oauth.refresh-token.time-to-kill-in-seconds=2592000
+#
+# Personal access token
+#
+cas.authn.oauth.personal-access-token.time-to-kill-in-seconds=2592000
+cas.authn.oauth.personal-access-token.max-time-to-live-in-seconds=31104000
+#
+# Signing and encryption for OAuth registered service
+#
+cas.authn.oauth.crypto.signing.key=changeme
+cas.authn.oauth.crypto.encryption.key=changeme
+########################################################################################################################
