Update settings and languges for login throttling

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -19,12 +19,16 @@ cas.server.tomcat.server-name=OSF CAS
 
 ########################################################################################################################
 # Throttling
+# Configuration guide: https://apereo.github.io/cas/6.2.x/installation/Configuring-Authentication-Throttling.html
+# Properties: https://apereo.github.io/cas/6.2.x/configuration/Configuration-Properties.html#authentication-throttling
 ########################################################################################################################
+#
 # Authentication Failure Throttling
+#
 cas.authn.throttle.username-parameter=username
 cas.authn.throttle.app-code=CAS
-cas.authn.throttle.failure.threshold=5
 cas.authn.throttle.failure.code=AUTHENTICATION_FAILED
+cas.authn.throttle.failure.threshold=5
 cas.authn.throttle.failure.range-seconds=1
 ########################################################################################################################
 
