--- a/build.gradle
+++ b/build.gradle
@@ -160,6 +160,26 @@ dependencies {
     implementation "org.jasig.cas.client:cas-client-core:${casClientVersion}"
     // The SAML module supports SAML validation for CAS-PAC4J institution SSO
     implementation "org.jasig.cas.client:cas-client-support-saml:${casClientVersion}"
+
+    // Log4j
+    implementation("org.apache.logging.log4j:log4j-api:$log4jVersion") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
+    }
+    implementation("org.apache.logging.log4j:log4j-core:$log4jVersion") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
+    }
+    implementation("org.apache.logging.log4j:log4j-jcl:$log4jVersion") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
+    }
+    implementation("org.apache.logging.log4j:log4j-jul:$log4jVersion") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
+    }
+    implementation("org.apache.logging.log4j:log4j-web:$log4jVersion") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
+    }
+    implementation("org.apache.logging.log4j:log4j-slf4j18-impl:$log4jVersion") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
+    }
 }
 
 tasks.findByName("jibDockerBuild")
