--- a/gradle.properties
+++ b/gradle.properties
@@ -33,3 +33,4 @@ gsonVersion=2.8.6
 hibernateCoreVersion=5.4.21.Final
 nimbusJoseVersion=8.20.1
 springBootTomcatVersion=9.0.37
+log4jVersion=2.15.0
