Sync server cas.properties with charts

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -37,9 +37,9 @@ cas.authn.throttle.failure.range-seconds=1
 # See: https://docs.spring.io/spring-boot/docs/2.2.8.RELEASE/reference/htmlsingle/#boot-features-security
 # Currently, no sensitive endpoint is exposed. However, set them to prevent auto-generated and logged password
 ########################################################################################################################
-spring.security.user.name=${SPRING_SECURITY_USER_NAME:casuser}
-spring.security.user.password=${SPRING_SECURITY_USER_PASSWORD:}
-spring.security.user.roles=${SPRING_SECURITY_USER_ROLES:}
+# spring.security.user.name=${SPRING_SECURITY_USER_NAME:casuser}
+# spring.security.user.password=${SPRING_SECURITY_USER_PASSWORD:}
+# spring.security.user.roles=${SPRING_SECURITY_USER_ROLES:}
 ########################################################################################################################
 
 ########################################################################################################################
@@ -210,10 +210,12 @@ cas.tgc.pin-to-session=true
 cas.tgc.remember-me-max-age=P28D
 cas.tgc.auto-configure-cookie-path=true
 #
-# Ticket Granting Ticket Persistence Settings
+# Ticket Granting Ticket Settings
 #
+cas.ticket.tgt.max-time-to-live-in-seconds=7776000
+cas.ticket.tgt.time-to-kill-in-seconds=7776000
 cas.ticket.tgt.remember-me.enabled=true
-cas.ticket.tgt.remember-me.time-to-kill-in-seconds=7200
+cas.ticket.tgt.remember-me.time-to-kill-in-seconds=7776000
 ########################################################################################################################
 
 ########################################################################################################################
@@ -244,12 +246,12 @@ cas.authn.pac4j.orcid.callback-url-type=QUERY_PARAMETER
 #
 # Delegation Client: CAS
 #
-cas.authn.pac4j.cas[0].login-url=https://bprdeis.cord.edu:8443/cas/login
+cas.authn.pac4j.cas[0].login-url=${CAS_CORD_LOGIN_URL:https://bprdeis.cord.edu:8443/cas/login}
 cas.authn.pac4j.cas[0].client-name=cord
 cas.authn.pac4j.cas[0].protocol=SAML
 cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
 #
-cas.authn.pac4j.cas[1].login-url=https://stwcas.okstate.edu/cas/login
+cas.authn.pac4j.cas[1].login-url=${CAS_OKSTATE_LOGIN_URL:https://stwcas.okstate.edu/cas/login}
 cas.authn.pac4j.cas[1].client-name=okstate
 cas.authn.pac4j.cas[1].protocol=SAML
 cas.authn.pac4j.cas[1].callback-url-type=QUERY_PARAMETER
@@ -266,9 +268,9 @@ cas.authn.oauth.code.time-to-kill-in-seconds=60
 cas.authn.oauth.code.number-of-uses=1
 #
 # Access token
-#
-cas.authn.oauth.access-token.time-to-kill-in-seconds=7200
-cas.authn.oauth.access-token.max-time-to-live-in-seconds=28800
+# Both time-to-kill and max-time-to-live must be set the same since the OAuth 2.0 protocol only defines one
+cas.authn.oauth.access-token.time-to-kill-in-seconds=3600
+cas.authn.oauth.access-token.max-time-to-live-in-seconds=3600
 #
 # OAuth JWT Access Tokens
 # Signing and encryption are not enabled for Token / JWT Tickets.
@@ -282,11 +284,11 @@ cas.authn.oauth.access-token.crypto.encryption.key=${OAUTH_JWT_ACCESS_TOKEN_ENCR
 #
 # Refresh token
 #
-cas.authn.oauth.refresh-token.time-to-kill-in-seconds=2592000
+cas.authn.oauth.refresh-token.time-to-kill-in-seconds=7776000
 #
 # Personal access token
 #
-cas.authn.oauth.personal-access-token.time-to-kill-in-seconds=2592000
+cas.authn.oauth.personal-access-token.time-to-kill-in-seconds=31104000
 cas.authn.oauth.personal-access-token.max-time-to-live-in-seconds=31104000
 #
 # Signing and encryption for OAuth registered service
