Update PAT's expiration policy to never-expire.

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -297,6 +297,7 @@ cas.authn.oauth.access-token.crypto.encryption.key=${OAUTH_JWT_ACCESS_TOKEN_ENCR
 cas.authn.oauth.refresh-token.time-to-kill-in-seconds=7776000
 #
 # Personal access token
+# Note: personal access token never expire, neither using the default properties nor setting them here is effective
 #
 cas.authn.oauth.personal-access-token.time-to-kill-in-seconds=31104000
 cas.authn.oauth.personal-access-token.max-time-to-live-in-seconds=31104000
