--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -310,8 +310,9 @@ cas.authn.oauth.access-token.crypto.encryption.key=changeme
 cas.authn.oauth.refresh-token.time-to-kill-in-seconds=2592000
 #
 # Personal access token
+# Note: personal access token never expire, neither using the default properties nor setting them here is effective
 #
-cas.authn.oauth.personal-access-token.time-to-kill-in-seconds=2592000
+cas.authn.oauth.personal-access-token.time-to-kill-in-seconds=31104000
 cas.authn.oauth.personal-access-token.max-time-to-live-in-seconds=31104000
 #
 # Signing and encryption for OAuth registered service
