--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -275,7 +275,7 @@ cas.authn.pac4j.cas[1].protocol=SAML
 cas.authn.pac4j.cas[1].callback-url-type=QUERY_PARAMETER
 #
 cas.authn.pac4j.cas[2].login-url=http://192.168.168.167:8081/login
-cas.authn.pac4j.cas[2].client-name=fakecas
+cas.authn.pac4j.cas[2].client-name=osftype0
 cas.authn.pac4j.cas[2].protocol=CAS30
 cas.authn.pac4j.cas[2].callback-url-type=QUERY_PARAMETER
 ########################################################################################################################
