Update cas.properties for left pane

--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -97,6 +97,13 @@ cas.logout.remove-descendant-tickets=false
 #
 cas.authn.osf-url.home=http://localhost:5000/
 cas.authn.osf-url.dashboard=http://localhost:5000/dashboard/
+cas.authn.osf-url.search=http://localhost:5000/search/
+cas.authn.osf-url.support=https://help.osf.io
+cas.authn.osf-url.registries=http://localhost:5000/registries/discover/
+cas.authn.osf-url.preprints=http://localhost:5000/preprints/discover/
+cas.authn.osf-url.meetings=http://localhost:5000/meetings/
+cas.authn.osf-url.collections=https://www.cos.io/products/osf-collections
+cas.authn.osf-url.donate=https://www.cos.io/support-cos
 cas.authn.osf-url.login-with-next=http://localhost:5000/login?next=
 cas.authn.osf-url.logout=http://localhost:5000/logout/
 cas.authn.osf-url.resend-confirmation=http://localhost:5000/resend/
