--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -90,6 +90,13 @@ cas.logout.remove-descendant-tickets=false
 #
 cas.authn.osf-url.home=https://{{ .Values.osfDomain }}/
 cas.authn.osf-url.dashboard=https://{{ .Values.osfDomain }}/dashboard/
+cas.authn.osf-url.search=https://{{ .Values.osfDomain }}/search/
+cas.authn.osf-url.support=https://help.osf.io
+cas.authn.osf-url.registries=https://{{ .Values.osfDomain }}/registries/discover/
+cas.authn.osf-url.preprints=https://{{ .Values.osfDomain }}/preprints/discover/
+cas.authn.osf-url.collections=https://www.cos.io/products/osf-collections
+cas.authn.osf-url.meetings=https://{{ .Values.osfDomain }}/meetings/
+cas.authn.osf-url.donate=https://www.cos.io/support-cos
 cas.authn.osf-url.login-with-next=https://{{ .Values.osfDomain }}/login?next=
 cas.authn.osf-url.logout=https://{{ .Values.osfDomain }}/logout/
 cas.authn.osf-url.resend-confirmation=https://{{ .Values.osfDomain }}/resend/
