Add configuration settings to set dev mode options

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -15,6 +15,13 @@ cas.server.prefix=${cas.server.name}
 # Tomcat Server
 #
 cas.server.tomcat.server-name=OSF CAS
+#
+# Dev Mode Options
+#
+cas.server.dev-mode.allow-force-authn-exception=${ALLOW_FORCE_AUTHN_EXCEPTION:false}
+cas.server.dev-mode.allow-force-http-error=${ALLOW_FORCE_HTTP_ERROR:false}
+#
+######################################################
 ########################################################################################################################
 
 ########################################################################################################################
