--- a/etc/cas/config/local/cas-local.properties
+++ b/etc/cas/config/local/cas-local.properties
@@ -21,6 +21,11 @@ cas.server.tomcat.server-name=OSF CAS
 # cas.server.tomcat.http.enabled=true
 # cas.server.tomcat.http.attributes=
 # e.g. cas.server.tomcat.http.attributes.{attribute-name}={attributeValue}
+#
+# Dev Mode Options
+#
+cas.server.dev-mode.allow-force-authn-exception=true
+cas.server.dev-mode.allow-force-http-error=true
 ########################################################################################################################
 
 ########################################################################################################################
